--- a/Resources/Info.plist
+++ b/Resources/Info.plist
@@ -15,10 +15,10 @@
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2019 Kam Dracc. All rights reserved.</string>
+	<string>Copyright © 2019 Socii. All rights reserved.</string>
 </dict>
 </plist>
